--- a/codigo/public/style.css
+++ b/codigo/public/style.css
@@ -1,3 +1,10 @@
-body{
+.bodyindex{
     background-color: #deb489;
+}
+#cabeca{
+    background-color: #3d2f2b;
+}
+.link{
+    font-size:x-large;
+    color: ;
 }
