--- a/codigo/public/style.css
+++ b/codigo/public/style.css
@@ -8,9 +8,16 @@
 .tit{
     font-size: 300%;
     color: #f6f3ee;
+    text-align: center;
 }
 .link{
     font-size:x-large;
     color: #f6f3ee;
 }
+#titulogeral{
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+}
