--- a/codigo/public/style.css
+++ b/codigo/public/style.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'the seasons';
+    src: url();
+}
 .bodyindex{
     background-color: #deb489;
 }
@@ -6,7 +10,7 @@
 }
 
 .tit{
-    font-size: 300%;
+    /*;font-size: 300%;*/
     color: #f6f3ee;
     text-align: center;
 }
@@ -21,4 +25,24 @@
     align-items: center;
 
 }
-.div
+.divinicio{
+
+}
+.divperfil{
+
+}
+.divreceitas{
+
+}
+.divbsucar{
+
+}
+.divsobre{
+
+}
+.divsobre{
+
+}
+.divlogin{
+
+}
