--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -25,8 +25,8 @@ truetype -ttf
 #cabeca{
     background-color: #3d2f2b;
     display: flex;
-    justify-content:center;
-    align-items: center;
+    margin-left: 100px;
+    margin-top: -100px;
     /* width: 200px; */
 }
 #cabeca2{
@@ -34,6 +34,8 @@ truetype -ttf
     display: flex;
     justify-content: end;
     align-items: center;
+    margin-right: 200px;
+    margin-top: -50px;
 }
 
 .tit{
