--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -21,6 +21,7 @@ truetype -ttf
 }
 #fundo{
     background-color: #3d2f2b;
+    height: 175px;
 }
 #cabeca{
     background-color: #3d2f2b;
@@ -34,8 +35,9 @@ truetype -ttf
     display: flex;
     justify-content: end;
     align-items: center;
-    margin-right: 200px;
-    margin-top: -50px;
+    margin-right: 250px;
+    margin-top: -105px;
+    /* width: 2000px; */
 }
 
 .tit{
@@ -44,8 +46,8 @@ truetype -ttf
     text-align: center;
     font-family: 'camiro';
     align-items: center;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: -40px;
+    margin-bottom: 0px;
     margin-right: -1850px;
 }
 .titu{
