--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -19,7 +19,7 @@ truetype -ttf
 .bodyindex{
     background-color: #deb489;
 }
-#fundo{
+#fundoindex{
     background-color: #3d2f2b;
     height: 175px;
 }
