--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -21,13 +21,13 @@ truetype -ttf
 }
 #fundoindex{
     background-color: #3d2f2b;
-    height: 175px;
+    height: 200px;
 }
 #cabeca{
     background-color: #3d2f2b;
     display: flex;
     margin-left: 100px;
-    margin-top: -100px;
+    margin-top: -50px;
     /* width: 200px; */
 }
 #cabeca2{
@@ -36,7 +36,7 @@ truetype -ttf
     justify-content: end;
     align-items: center;
     margin-right: 250px;
-    margin-top: -90px;
+    margin-top: -100px;
     /* width: 2000px; */
 }
 
@@ -47,21 +47,19 @@ truetype -ttf
     text-align: center;
     font-family: 'camiro';
     align-items: center;
-    margin-top: 2px;
+    /* margin-top: 0px; */
     margin-right: -1150px;
     justify-content: center;
 }
 .titu{
     display: flex;
-    flex-direction: row-reverse;
     gap: 100px;
     align-items: flex-end;
     width: 3px;
     height: 3px;
-    margin-top: 0;
+    margin-top: 3px;
     margin-bottom: 0;
-    margin-left: 3px;
-    margin-right: 3px;
+    margin-left: 750px;
 
 }
 .link{
