--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -3,6 +3,7 @@ opentype - otf
 truetype -ttf
 */
 
+
 @font-face {
     font-family: 'qarinthen';
     src: url(Qarinthen.otf) format('opentype');
@@ -78,6 +79,16 @@ truetype -ttf
 
 a{
     text-decoration: none;
+}
+
+#imagemindex{
+    max-width: 1000px;
+    max-height: 1000px;
+    width: auto;
+    height: auto;
+    margin-left: 30px;
+    margin-bottom: 30px;
+    margin-top: 85px;
 }
 
 
