--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -23,6 +23,9 @@ truetype -ttf
 #fundoindex{
     background-color: #3d2f2b;
     height: 200px;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 30px;
 }
 #cabeca{
     background-color: #3d2f2b;
@@ -36,6 +39,7 @@ truetype -ttf
     display: flex;
     justify-content: end;
     align-items: center;
+    margin-left: 25px;
     margin-right: 250px;
     margin-top: -100px;
     /* width: 2000px; */
@@ -82,11 +86,11 @@ a{
 }
 
 #imagemindex{
-    max-width: 1000px;
-    max-height: 1000px;
+
+    max-height: 650px;
     width: auto;
     height: auto;
-    margin-left: 30px;
+    margin-left:20px;
     margin-bottom: 30px;
     margin-top: 85px;
 }
