--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -606,7 +606,7 @@ label {
 .fundosn1 {
     background-color: #deb489;
     height: 1000px;
-    width: 1950px;
+    width: 1963px;
 }
 
 .tricolor1 {
@@ -728,6 +728,16 @@ label {
     margin-top: 240px;
     margin-left: 200px;
     z-index: 3;
+    transition: all .4s ease-in-out;
+}
+
+#estrelacima:hover{
+    width: 100px;
+}
+
+#estrelabaixo:hover{
+    width: 80px;
+    z-index: 7;
 }
 
 #estrelabaixo{
@@ -744,6 +754,10 @@ label {
     width: auto;
     height: auto;
 }
+
+#paogatodireita:hover{
+    max-width: 140px;
+}
 #paogatodireita{
     position: absolute;
     width: 100%;
@@ -751,6 +765,11 @@ label {
     max-width: 120px;
     margin-top: 130px;
     margin-left: 1800px;
+    transition: max-width .5s ease-out;
+}
+
+#paogatoesquerda:hover{
+    max-width: 125px;
 }
 #paogatoesquerda{
     position: absolute;
@@ -780,7 +799,7 @@ label {
 .fundorpb{
     background-color: #342420;
     height: 400px;
-    width: 1950px;
+    width: 1963px;
     position:absolute;
     align-items: center;
     margin-top: 730px;
@@ -803,7 +822,7 @@ label {
 }
 
 .fundosn2{
-    width: 1950px;
+    width: 1963px;
     height:  1050px;
 }
 .tricolor2 {
@@ -910,17 +929,15 @@ label {
     max-width: 600px;
 }
 
-
 .estrela1{
     position: absolute;
     z-index: 4;
     margin-top: 490px;
-    margin-left: 1540px;
+    margin-left: 1550px;
     width: 100%;
     height: auto;
     max-width: 350px;
     transform: rotate(25deg);
-    animation: cima .4s;
 }
 
 .estrela2{
