--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -533,7 +533,7 @@ label {
 }
 
 .botaosn:hover {
-    background: #000000;
+    background: #342420;
     color: #ffffff;
     box-shadow: 0 0 80px #ffffff8c;
 }
@@ -544,7 +544,7 @@ label {
     left: -20%;
     width: 20px;
     height: auto;
-    filter: drop-shadow(0 0 10px #fffdef);
+    filter: drop-shadow(0 0 10px #342420);
     z-index: 2;
 }
 
@@ -554,7 +554,7 @@ label {
     left: -25%;
     width: 15px;
     height: auto;
-    filter: drop-shadow(0 0 10px #fffdef);
+    filter: drop-shadow(0 0 10px #342420);
     z-index: 2;
 }
 
@@ -564,7 +564,7 @@ label {
     left: -10%;
     width: 10px;
     height: auto;
-    filter: drop-shadow(0 0 10px #fffdef);
+    filter: drop-shadow(0 0 10px #342420);
     z-index: 2;
 }
 
@@ -574,7 +574,7 @@ label {
     left: 105%;
     width: 20px;
     height: auto;
-    filter: drop-shadow(0 0 10px #fffdef);
+    filter: drop-shadow(0 0 10px #342420);
     z-index: 2;
 }
 
@@ -584,7 +584,7 @@ label {
     left: 115%;
     width: 15px;
     height: auto;
-    filter: drop-shadow(0 0 10px #fffdef);
+    filter: drop-shadow(0 0 10px #342420);
     z-index: 2;
 }
 
@@ -594,7 +594,7 @@ label {
     left: 105%;
     width: 10px;
     height: auto;
-    filter: drop-shadow(0 0 10px #fffdef);
+    filter: drop-shadow(0 0 10px #342420);
     z-index: 2;
 }
 
