--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -251,12 +251,12 @@ a {
 
 /*cadastro e login*/
 
-.bodycl {
+/* .bodycl {
     background-color: #deb489;
-}
+} */
 
 /*cadastro*/
-.caixafundocadastro {
+/* .caixafundocadastro {
     position: absolute;
     background-color: #f1f4d9;
     height: 800px;
@@ -266,10 +266,32 @@ a {
     border-radius: 15px 50px;
     margin-left: 640px;
     margin-top: 120px;
-}
+} */
 
 /*login*/
-.caixafundologin {
+
+.fundobrigadeirodiv{
+    background-color: #342420;
+    height: 700px;
+    width: 700px;
+    border-radius: 30px;
+    margin-left: 100px;
+}
+.brigadeiroimagemcl{
+    width: auto;
+    max-width: 650px;
+    height: 650px;
+    position: absolute;
+    margin-left: 20px;
+    margin-top:-30px;
+}
+
+.clpreencher{
+    background-color: ;
+}
+
+
+/* .caixafundologin {
     position: absolute;
     background-color: #f1f4d9;
     height: 600px;
@@ -403,8 +425,8 @@ label {
     padding-left: 130px;
     padding-right: 130px;
     margin-top: 13px;
-    margin-left: -175px;
-}
+    margin-left: -175px; 
+}*/
 
 /*Cadastro*/
 
