--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -270,12 +270,15 @@ a {
 
 /*login*/
 
-.fundobrigadeirodiv{
+/* .fundobrigadeirodiv{
     background-color: #342420;
     height: 700px;
     width: 700px;
     border-radius: 30px;
-    margin-left: 100px;
+    margin-left: 200px;
+    margin-top: 100px;
+    position: absolute;
+     z-index: 1; 
 }
 .brigadeiroimagemcl{
     width: auto;
@@ -287,11 +290,24 @@ a {
 }
 
 .clpreencher{
-    background-color: ;
+    background-color: #31170fb4;
+    position: absolute;
+    width: auto;
+    height: 600px;
+    margin-left: 300px;
+    margin-top: 150px;
+    z-index: 0;
 }
+.voltarbotao{
+    background-color: transparent !important;
+}
+.mostrarsenha{
+    background-color: transparent !important;
+    border: none
+} */
 
 
-/* .caixafundologin {
+.caixafundologin {
     position: absolute;
     background-color: #f1f4d9;
     height: 600px;
@@ -426,7 +442,7 @@ label {
     padding-right: 130px;
     margin-top: 13px;
     margin-left: -175px; 
-}*/
+}
 
 /*Cadastro*/
 
