--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -1092,10 +1092,10 @@ label.error {
 .tituloreceitadetalhada{
     color: #5f432c;
     z-index: 0;
-    margin-left: 150px;
+    margin-left: 200px;
     margin-top: 50px;
     position: absolute;
-    font-size: 600%;
+    font-size: 750%;
     font-family: 'aesthetic';
 }
 
@@ -1111,13 +1111,64 @@ label.error {
     position: absolute;
     z-index: 3;
     margin-left: 100px;
+    margin-top: 300px;
     width: auto;
     max-width: 300px;
 }
 
-.tiporeceitadetalhada{
+.tiporeceitadetalhadabola{
     position: absolute;
+    border-radius: 100%;
+    background-color: #5f432c;
+    margin-left: 900px;
+    margin-top: 15px;
+    padding-top: 110px;
+    padding-bottom: 110px;
+    padding-right: 50px;
+    padding-left: 50px;
+    color: #f5f9f5;
+    font-size: 200%;
+    font-family: 'gallient';
+    font-weight: 600;
+    cursor: default;
 }
+
+.temporeceitadetalhadabola{
+    position: absolute;
+    margin-left: 1200px;
+}
+
+/* .temporeceitadetalhadabola{
+    position: absolute;
+    border-radius: 100%;
+    background-color: #5f432c;
+    margin-left: 10200px;
+    margin-top: 15px;
+    padding-top: 110px;
+    padding-bottom: 110px;
+    padding-right: 50px;
+    padding-left: 50px;
+    color: #f5f9f5;
+    font-size: 200%;
+    font-family: 'gallient';
+    font-weight: 600;
+}
+
+.porcoesreceitadetalhadabola{
+    position: absolute;
+    border-radius: 100%;
+    background-color: #5f432c;
+    margin-left: 1500px;
+    margin-top: 15px;
+    padding-top: 110px;
+    padding-bottom: 110px;
+    padding-right: 50px;
+    padding-left: 50px;
+    color: #f5f9f5;
+    font-size: 200%;
+    font-family: 'gallient';
+    font-weight: 600;
+} */
 
 .mododepreparoreceitadetalhada{
     position: absolute;
